--- a/assets/sass/_qtip.scss
+++ b/assets/sass/_qtip.scss
@@ -1,1 +1,91 @@
-/* http://qtip2.com/options */
+.qtip-default {
+  position: relative;
+
+  width: 800px;
+  padding: 45px 50px;
+
+  color: #000;
+  background-color: #fff;
+  box-shadow: 0 15px 90px -2px #000 !important;
+  &:before {
+    position: absolute;
+    top: -18px;
+    left: 382px;
+
+    display: block;
+
+    width: 0;
+    height: 0;
+
+    content: '';
+    -webkit-transform: rotate(360deg);
+
+    border-width: 0 18px 18px 18px;
+    border-style: inset;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent;
+  }
+  .qtip-titlebar {
+    background-color: #ffef93;
+  }
+  .qtip-icon {
+    color: #777;
+    border-color: #ccc;
+    background: #f1f1f1;
+  }
+  .qtip-titlebar .qtip-close {
+    color: #111;
+    border-color: #aaa;
+  }
+  table {
+    width: 100%;
+    margin: 0 auto 40px;
+    tr {
+      td {
+        font-size: 14px;
+
+        width: 33%;
+        padding: 5px 0;
+
+        text-align: left;
+
+        color: #000;
+      }
+      &:first-child {
+        td {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+  h6 {
+    margin: 0 auto 1px 18px;
+
+    text-align: left;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      position: relative;
+
+      margin: 0 0 15px;
+      padding: 0 0 0 15px;
+      &:before {
+        position: absolute;
+        top: 5px;
+        left: 0;
+
+        display: block;
+
+        width: 5px;
+        height: 5px;
+
+        content: '';
+
+        border-radius: 50%;
+        background-color: #f02337;
+      }
+    }
+  }
+}
